--- a/assets/global.css
+++ b/assets/global.css
@@ -1,7 +1,97 @@
+body {
+  margin: 0;
+}
 .p-input-icon {
   cursor: pointer;
 }
 ul {
   list-style: none;
   padding-left: unset;
+}
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+.flex-col-between {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.flex-between {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.gap-20 {
+  gap: 20px;
+}
+.gap-24 {
+  gap: 24px;
+}
+.gap-48 {
+  gap: 48px;
+}
+.gap-60 {
+  gap: 60px;
+}
+
+/* GENERAL COMPONENTS */
+
+.container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.card {
+  width: 500px;
+  height: 500px;
+  position: relative;
+}
+
+@media (max-width: 768px) {
+  .card {
+    width: 100%;
+    height: 100%;
+    max-height: 100vh;
+  }
+}
+
+.backButton {
+  position: absolute;
+  top: 12px;
+  left: 4px;
+  .p-button-icon {
+    margin-right: 2px;
+  }
+}
+
+.card {
+  .p-card-body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .p-card-caption {
+    width: 100%;
+
+    .p-card-title {
+      width: 100%;
+    }
+  }
+}
+#confirmPassword {
+  width: 100%;
 }
